removed pollList component, made mode choices align correctly

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,10 @@ form {
   margin-bottom: 2em;
 }
 
+.modesContainer {
+
+}
+
 .modeFormBtn {
   display:block;
   width: 5vw;
